force-app/main/default/objects/PDRI__Data_Set_Template_Entry__c/PDRI__Data_Set_Template_Entry__c.object-meta.xml
<CustomObject>
    <label>Template Entry</label>
    <nameField>
        <displayFormat>TE-{00000000}</displayFormat>
        <label>Template Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Template Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>