force-app/main/default/objects/PDRI__Data_Set_Template_Entry__c/fields/PDRI__Content_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Content_Document_ID__c</fullName>
    <label>Content Document ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>