force-app/main/default/objects/PDRI__Data_Set_Template_Entry__c/fields/PDRI__Data_Set_Template__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Data_Set_Template__c</fullName>
    <label>Template</label>
    <referenceTo>PDRI__Data_Set_Template__c</referenceTo>
    <relationshipLabel>Template Entries</relationshipLabel>
    <relationshipName>Data_Set_Template_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>