force-app/main/default/objects/PDRI__Data_Set_Template_Entry__c/fields/PDRI__File_Download__c.field-meta.xml
<CustomField>
    <fullName>PDRI__File_Download__c</fullName>
    <formula>HYPERLINK( &quot;/sfc/servlet.shepherd/version/download/&quot; + PDRI__Content_Document_ID__c , &quot;Download&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Download</label>
    <type>Text</type>
</CustomField>