force-app/main/default/objects/PDRI__Data_Set_Template_Entry__c/fields/PDRI__File_Info__c.field-meta.xml
<CustomField>
    <fullName>PDRI__File_Info__c</fullName>
    <formula>HYPERLINK( &quot;/&quot; + PDRI__Content_Document_ID__c , &quot;View&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Info</label>
    <type>Text</type>
</CustomField>